# K8S_RM

./: Cargo.toml  Cross.toml  README.md
src/: main.rs
src/api/: mod.rs  namespace.rs  node.rs  pod.rs
src/models/: app.rs  config.rs  error.rs  mod.rs  resource.rs  search.rs  sort.rs
src/resources/: mod.rs  namespace_resource.rs  node_resource.rs  pod_resources.rs  resource.rs  resource_value.rs
src/ui/: event.rs  ui.rs
src/util/: common.rs
