[package]
name = "kube-rm"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { version = "0.85.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.19.0", features = ["v1_24"] }
tabled = "0.16.0"
clap = { version = "4.5.21", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
crossterm = "0.28.1"
openssl = { version = "0.10", features = ["vendored"] }
tui = "0.19.0"
dirs = "5.0.1"

[profile.release]
opt-level = "z"             # 크기 중심 최적화
strip = true                # 디버그 심볼 제거
lto = true                  # 링크 시간 최적화
codegen-units = 1           # 코드 생성 단위 줄이기
panic = "abort"             # 패닉을 최소화하여 크기 줄임

[features]
# __check = ["k8s-openapi/v1_24"]